fix swagger user controller(can input json)
